--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
 								<a class="pull-right" href="https://meow.bnw.im/p/{{reply.id.replace('/', '#')}}">#{{reply.id}}</a>
 						</h3>
 						<div class="popover-content">
-								<p ng-repeat="p in reply.text.split('\n')">{{p}}</p>
+								<p ng-repeat="p in reply.text|lines track by $index">{{p}}</p>
 						</div>
 		        </div>
 				<p ng-show="finish">Поздравляем! Вы доскроллили до начала времен.</p>
