--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
 <head>
         <meta charset="UTF-8">
         <title>Bnw Replies</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
 		<link rel="stylesheet" href="/bower_components/flatstrap/dist/css/bootstrap.min.css" media="all">
 		<link rel="stylesheet" href="/bower_components/flatstrap/dist/css/bootstrap-theme.min.css" media="all">
 		<link rel="stylesheet" href="/styles.css" media="all">
