--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 		<script src="/bower_components/moment/moment.js"></script>
 		<script src="/scripts.js"></script>
 </head>
-<body ng-controller="Replies">
+<body ng-controller="Replies" autoscroll="replies">
 		<div class="container">
 				<div class="reply" ng-repeat="reply in replies">
 						<div class="quote">
