--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
 		<div class="container" ng-controller="Replies" autoscroll="replies" infinitescroll="load()">
+			<header>
+				<h1>Анархо-аутизм</h1>
+				<h2>Ни одно государство в мире не в силах запретить твой аутизм</h2>
+			</header>
 			<div class="replies">
 				<div class="reply" ng-repeat="reply in replies">
 						<div class="quote">
