--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,19 @@
 				<h1 ng-hide="user || top">Не твой личный анархо-аутизм</h1>
 				<h1 ng-hide="!user || top">Это твой аутизм, {{user}}</h1>
 				<h1 ng-hide="user || !top">Эхо анархии</h1>
+				<ul class="nav">
+					<li>
+						<a href="/">Последнее</a>
+					</li>
+					<li>
+						<a href="/top">Лучшее</a>
+					</li>
+					<li ng-controller="For">
+						<form ng-submit="for(name)">
+							Аутизм для <input type="text" ng-model="name"> <button role="submit">Получить</button>
+						</form>
+					</li>
+				</ul>
 			</header>
 			<div class="replies">
 				<div class="reply" ng-repeat="reply in replies">
