--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,10 @@
 							<a class="date" href="https://meow.bnw.im/p/{{reply.id.replace('/', '#')}}">about {{reply.date|moment}}</a>
 						</div>
 		        </div>
-			</div>	
+			</div>
+			<footer>
+				<a href="https://github.com/border-radius/anarcho-autism">Свобода</a>
+			</footer>
 		</div>
 	</script>
 </body>
