Personal autism form border

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 						<a href="/top">Лучшее</a>
 					</li>
 					<li ng-controller="For">
-						<form ng-submit="for(name)">
+						<form class="personal" ng-submit="for(name)">
 							Аутизм для <input type="text" ng-model="name"> <button role="submit">Получить</button>
 						</form>
 					</li>
